<resources>
    <string name="app_name">Comp3606AssignmentSolution</string>
    <string name="wifi_direct_info">Wifi Direct Info</string>
    <string name="txt_no_permission">You did not grant all the app\'s permissions, please grant them manually in settings and restart the app</string>
    <string name="open_app_settings">Open App Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_peers">Discover Peers</string>
    <string name="wifi_adapter_off">Your Wi-Fi adapter is off. Please turn it on</string>
    <string name="disconnect">Disconnect</string>
    <string name="hint_quantity">Enter the quantity of the item</string>
    <string name="hint_seller_name">Seller\'s name...</string>
    <string name="list_item">List item</string>
    <string name="hint_name">Enter the name of the item</string>
</resources>