<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_permissions_denied"
            android:orientation="vertical"
            android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/txt_no_permission"/>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_app_settings"
                        android:onClick="openAppSettings"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_permissions_granted">

                <!--Note:
                        1 - Button appropriately labelled
                        2 - centered in user interface
                        3 - Appropriate onclick defined in either the MainActivity or xml
                -->
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_direct_info"
                    android:onClick="openWfdDialog"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_marketplace_entry"
                    android:padding="24dp"
                    android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_seller_name"
                            android:inputType="text"
                            android:autofillHints="name"
                            android:hint="@string/hint_seller_name"
                            />

                        <!-- Edit text here should have an input type of number. Not sure if I'd penalize-->
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_item_quantity"
                            android:inputType="number"
                            android:autofillHints=""
                            android:hint="@string/hint_quantity"
                            />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_item_name"
                            android:inputType="textCapWords"
                            android:autofillHints=""
                            android:hint="@string/hint_name"
                            />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/list_item"
                            android:onClick="listMarketplaceItem"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_marketplace"/>


        </LinearLayout>

</RelativeLayout>